--- a/src/quill.css
+++ b/src/quill.css
@@ -407,10 +407,9 @@
   border: none;
   cursor: pointer;
   display: inline-block;
-  float: left;
-  height: 24px;
+  height: 32px;
   padding: 3px 5px;
-  width: 28px;
+  width: 32px;
 }
 .ql-snow.ql-toolbar button svg,
 .ql-snow .ql-toolbar button svg {
@@ -592,10 +591,10 @@
   display: none;
 }
 .ql-snow .ql-editor h1 {
-  font-size: 2em;
+  font-size: 2.5rem;
 }
 .ql-snow .ql-editor h2 {
-  font-size: 1.5em;
+  font-size: 2rem;
 }
 .ql-snow .ql-editor h3 {
   font-size: 1.17em;
@@ -862,6 +861,11 @@
   font-family: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto,
     Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   padding: 8px;
+  position: fixed;
+  top: 0;
+  background: #fff;
+  z-index: 10;
+  width: 48rem;
 }
 .ql-toolbar.ql-snow .ql-formats {
   margin-right: 15px;
