--- a/src/quill.css
+++ b/src/quill.css
@@ -643,10 +643,9 @@
 .ql-snow .ql-picker {
   color: #444;
   display: inline-block;
-  float: left;
   font-size: 14px;
   font-weight: 500;
-  height: 24px;
+  height: 32px;
   position: relative;
   vertical-align: middle;
 }
@@ -654,8 +653,6 @@
   cursor: pointer;
   display: inline-block;
   height: 100%;
-  padding-left: 8px;
-  padding-right: 2px;
   position: relative;
   width: 100%;
 }
@@ -695,15 +692,11 @@
 }
 .ql-snow .ql-color-picker,
 .ql-snow .ql-icon-picker {
-  width: 28px;
-}
-.ql-snow .ql-color-picker .ql-picker-label,
-.ql-snow .ql-icon-picker .ql-picker-label {
-  padding: 2px 4px;
+  width: 32px;
 }
 .ql-snow .ql-color-picker .ql-picker-label svg,
 .ql-snow .ql-icon-picker .ql-picker-label svg {
-  right: 4px;
+  height: 100%;
 }
 .ql-snow .ql-icon-picker .ql-picker-options {
   padding: 4px 0px;
